elastic/manifests/elasticsearch-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: elasticsearch-gateway
  namespace: elastic
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "elasticsearch.###ZARF_DOMAIN_NAME###"
