elastic/manifests/kibana-gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kibana-gateway
  namespace: elastic
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
      - "kibana.###ZARF_DOMAIN_NAME###"
